Fix bug #41287 (Namespace functions don't allow xmlns to be optional) add test